syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "Adnc.Demo.Shared.Rpc.Grpc.Messages";

package messages;

message DictRequest{
	int64 Id=1;
}

message DictReply{
  int64 Id=1;
  string Name= 2;
  int32 Ordinal=3;
 google.protobuf.Int64Value Pid =4;
 string Value = 5;
 repeated DictReply Children = 6;
}